examples/test/testpolicy406.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy406
  namespace: namespace4
spec:
  podSelector:
    matchLabels:
      key0: value21
      key24: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value45
          key21: value38
      podSelector:
        matchLabels:
          key49: value12
